--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
+    //Image Cropper
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
