--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddInstrumentActivity"></activity>
+        <activity android:name=".ClickInstrumentActivity"></activity>
+        <activity android:name=".AddInstrumentActivity" />
         <activity android:name=".SetUpActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
