--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".FindMusicianActivity"
+            android:parentActivityName=".AddBandActivity">
+
+        </activity>
+        <activity android:name=".AddBandActivity" />
+        <activity
             android:name=".ProfileActivity"
             android:parentActivityName=".MainActivity" />
         <activity
