--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".FindMusicianActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:parentActivityName=".AddBandActivity">
 
         </activity>
