--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ResetPasswordActivity"
+            android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".FindMusicianActivity"
-            android:windowSoftInputMode="adjustNothing"
-            android:parentActivityName=".AddBandActivity">
-
-        </activity>
+            android:parentActivityName=".AddBandActivity"
+            android:windowSoftInputMode="adjustNothing"></activity>
         <activity android:name=".AddBandActivity" />
         <activity
             android:name=".ProfileActivity"
