--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MessagesActivity"
+        <activity android:name=".MyBandsActivity"
             android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".MusiciansActivity"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".MessagesActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".MusiciansActivity"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".PersonActivity" />
         <activity
             android:name=".ResetPasswordActivity"
