Retrieving bands per musician and showing it in NavigationDrawer header

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".FindMusicianActivity"
-            android:parentActivityName=".AddBandActivity"
+            android:parentActivityName=".MainActivity"
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".ProfileActivity"
