Shared preferences for currentBandId

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyBandsActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".BandProfileActivity"></activity>
+        <activity
+            android:name=".MyBandsActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".MessagesActivity"
             android:parentActivityName=".MainActivity" />
