--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BandProfileActivity"></activity>
+        <activity android:name=".BandRequestActivity"></activity>
+        <activity android:name=".BandProfileActivity" />
         <activity
             android:name=".MyBandsActivity"
             android:parentActivityName=".MainActivity" />
