--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation "androidx.cardview:cardview:1.0.0"
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
@@ -57,6 +58,13 @@ dependencies {
 
     //Youtube
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+
+    // JSON Parsing
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
