--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SongActivity"></activity>
+        <activity android:name=".VideoDetailActivity"></activity>
+        <activity android:name=".SearchYoutubeActivity" />
+        <activity android:name=".SongActivity" />
         <activity android:name=".QuitBandActivity" />
         <activity android:name=".BandRequestActivity" />
         <activity android:name=".BandProfileActivity" />
