--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VideoDetailActivity"></activity>
+        <activity android:name=".PlaylistActivity"></activity>
+        <activity android:name=".VideoDetailActivity" />
         <activity android:name=".SearchYoutubeActivity" />
         <activity android:name=".SongActivity" />
         <activity android:name=".QuitBandActivity" />
