--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation("com.squareup.okhttp3:okhttp:4.3.1")
 
     //Expandable RecyclerView
     implementation 'com.thoughtbot:expandablerecyclerview:1.3'
