--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,18 +7,23 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".MyBands"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyBands"
         android:theme="@style/AppTheme">
-        <activity android:name=".PlaylistActivity"></activity>
+        <activity android:name=".YoutubeDialogActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Dialog"></activity>
+        <activity android:name=".MySongsActivity" />
+        <activity android:name=".PlaylistActivity" />
         <activity android:name=".VideoDetailActivity" />
         <activity android:name=".SearchYoutubeActivity" />
-        <activity android:name=".SongActivity"
-            android:launchMode="singleTask"/>
+        <activity
+            android:name=".SongActivity"
+            android:launchMode="singleTask" />
         <activity android:name=".QuitBandActivity" />
         <activity android:name=".BandRequestActivity" />
         <activity android:name=".BandProfileActivity" />
