Update Song not working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SongUpdateActivity"></activity>
+        <activity android:name=".VideoUpdateDetailActivity"></activity>
+        <activity android:name=".SearchYoutubeUpdateActivity" />
+        <activity android:name=".SongUpdateActivity" />
         <activity
             android:name=".YoutubeDialogActivity"
             android:theme="@style/Transparent"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity android:name=".MySongsActivity" />
         <activity android:name=".PlaylistActivity" />
         <activity android:name=".VideoDetailActivity" />
