Update Song working - MyPlaylists not working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:theme="@style/full_screen_dialog" />
         <activity android:name=".VideoUpdateDetailActivity" />
         <activity android:name=".SearchYoutubeUpdateActivity" />
-        <activity android:name=".SongUpdateActivity" />
+        <activity android:name=".SongUpdateActivity"
+            android:launchMode="singleTask"/>
         <activity
             android:name=".YoutubeDialogActivity"
             android:theme="@style/Transparent"
