--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddSongsToPlaylistActivity"></activity>
+        <receiver android:name=".EventAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/event_app_widget_info" />
+        </receiver>
+
+        <activity android:name=".AddSongsToPlaylistActivity" />
         <activity android:name=".CreateEventActivity" />
         <activity android:name=".ConcertActivity" />
         <activity android:name=".RehearsalActivity" />
