--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
 
     //Google SignIn
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    //Facebook SignIn
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+
     //Butterknife
     implementation 'com.jakewharton:butterknife:10.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
