--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     //Butterknife
     implementation 'com.jakewharton:butterknife:10.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
     //Image Cropper
@@ -70,6 +71,9 @@ dependencies {
 
     // JSON Parsing
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    //Google Maps
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
 
     testImplementation 'junit:junit:4.12'
