--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,12 @@ dependencies {
 
     //Google Maps
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.google.android.libraries.places:places-compat:1.1.0'
+//    implementation 'com.google.android.gms:play-services-maps:10.0.1'
+//    implementation 'com.google.android.gms:play-services-location:10.0.1'
+//    implementation 'com.google.android.gms:play-services-places:10.0.1'
 
 
     testImplementation 'junit:junit:4.12'
