Create events and update event Google Maps working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,8 @@
 
         <activity android:name=".AddSongsToPlaylistActivity" />
         <activity android:name=".CreateEventActivity"
-            android:launchMode="singleTask"/>
+            android:launchMode="singleTask"
+            android:parentActivityName=".MapActivity"/>
         <activity android:name=".ConcertActivity" />
         <activity android:name=".RehearsalActivity" />
         <activity android:name=".MyPlaylistsActivity" />
